@@ -33,6 +33,7 @@ EXTRA_DIST = 				\
 	test_component_feed.py		\
 	test_component_httpserver.py 	\
 	test_component_httpstreamer.py 	\
+	test_component_playlist.py 	\
 	test_config.py 			\
 	test_credentials.py 		\
 	test_dag.py	 		\
